update api backup for eueno and ziden
