# src/controllers/DataEncyptController.ts
@@ -2,18 +2,34 @@ import { Request, Response } from "express";
 import { buildErrorMessage, buildResponse } from "../common/APIBuilderResponse.js";
 import { ExceptionMessage } from "../common/enum/ExceptionMessages.js";
 import { ResultMessage } from "../common/enum/ResultMessages.js";
-
 import { getAllClaimByQuery, updateData } from "../services/DataEncypt.js";
+
+import { euenoGetAllClaimByQuery, euenoUpdateData } from "../services/EuenoDataEncypt.js";
 
 export class DataEncryptController {
     public async updateData(req: Request, res: Response) {
         try {
             const {holderId, issuerId, claimId, data, nonce} = req.body;
+
             if (!holderId || !issuerId || !claimId|| !data || !nonce) {
                 throw("Invalid data!");
             }
-            const apiResponse = await updateData(holderId, issuerId, claimId, data, nonce);
-            res.send(buildResponse(ResultMessage.APISUCCESS.status, apiResponse, ResultMessage.APISUCCESS.message));
+
+            const {type} = req.query;
+
+            if (type != "ZIDEN" && type != "EUENO") {
+                throw("type must be equal ZIDEN or EUENO");
+            }
+
+            if (type == "EUENO") {
+                const apiResponse = await euenoUpdateData(holderId, issuerId, claimId, data, nonce);
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, apiResponse, ResultMessage.APISUCCESS.message));
+            }
+
+            if (type == "ZIDEN") {
+                const apiResponse = await updateData(holderId, issuerId, claimId, data, nonce);
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, apiResponse, ResultMessage.APISUCCESS.message));
+            }
         
         } catch (err: any) {
             res.send(buildErrorMessage(ExceptionMessage.UNKNOWN.status, err, ExceptionMessage.UNKNOWN.message));
@@ -41,9 +57,26 @@ export class DataEncryptController {
                 throw("holderId must be string");
             }
 
-            const dataEncrypt = await getAllClaimByQuery(holderId, issuerId, claimId);
+            const {type} = req.query;
+
+            if (type != "ZIDEN" && type != "EUENO") {
+                throw("type must be equal ZIDEN or EUENO");
+            }
+
+            if (type == "EUENO") {
+
+                const dataEncrypt = await euenoGetAllClaimByQuery(holderId, issuerId, claimId);
             
-            res.send(buildResponse(ResultMessage.APISUCCESS.status, {dataEncrypt: dataEncrypt}, ResultMessage.APISUCCESS.message));
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, {dataEncrypt: dataEncrypt}, ResultMessage.APISUCCESS.message));
+            }
+
+            if (type == "ZIDEN") {
+
+                const dataEncrypt = await getAllClaimByQuery(holderId, issuerId, claimId);
+            
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, {dataEncrypt: dataEncrypt}, ResultMessage.APISUCCESS.message));
+            }
+
         } catch (err: any) {
             res.send(buildErrorMessage(ExceptionMessage.UNKNOWN.status, err, ExceptionMessage.UNKNOWN.message));
         }
