# src/controllers/PrivateKeyEncryptController.ts
@@ -2,7 +2,8 @@ import { Request, Response } from "express";
 import { buildErrorMessage, buildResponse } from "../common/APIBuilderResponse.js";
 import { ExceptionMessage } from "../common/enum/ExceptionMessages.js";
 import { ResultMessage } from "../common/enum/ResultMessages.js";
-import { updatePrivateKey, getPrivateKey } from "../services/PrivateKeyEncypt.js";
+import { euenoUpdatePrivateKey, euenoGetPrivateKey } from "../services/EuenoPrivateKeyEncypt.js";
+import { getPrivateKey, updatePrivateKey } from "../services/PrivateKeyEncypt.js";
 
 export class PrivateKeyEncryptController {
     public async updatePrivateKey(req: Request, res: Response) {
@@ -11,8 +12,22 @@ export class PrivateKeyEncryptController {
             if (!holderId || !keyEncrypt) {
                 throw("Invalid data");
             }
-            const privateKeyEncrypt = await updatePrivateKey(holderId, keyEncrypt);
-            res.send(buildResponse(ResultMessage.APISUCCESS.status, privateKeyEncrypt, ResultMessage.APISUCCESS.message));
+
+            const {type} = req.query;
+            if (type != "ZIDEN" && type != "EUENO") {
+                throw("type must be equal ZIDEN or EUENO");
+            }
+
+            if (type == "EUENO") {
+                const privateKeyEncrypt = await euenoUpdatePrivateKey(holderId, keyEncrypt);
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, privateKeyEncrypt, ResultMessage.APISUCCESS.message));
+            }
+
+            if (type == "ZIDEN") {
+                const privateKeyEncrypt = await updatePrivateKey(holderId, keyEncrypt);
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, privateKeyEncrypt, ResultMessage.APISUCCESS.message));
+            }
+
         } catch (err: any) {
             res.send(buildErrorMessage(ExceptionMessage.UNKNOWN.status, err, ExceptionMessage.UNKNOWN.message));
         }
@@ -25,9 +40,23 @@ export class PrivateKeyEncryptController {
                 throw("Invalid data");
             }
             
-            const privateKeyEncrypt = await getPrivateKey(holderId);
-            res.send(buildResponse(ResultMessage.APISUCCESS.status, {privateKeyEncrypt: privateKeyEncrypt}, ResultMessage.APISUCCESS.message));
-        } catch (err: any) {
+            const {type} = req.query;
+            if (type != "ZIDEN" && type != "EUENO") {
+                throw("type must be equal ZIDEN or EUENO");
+            }
+
+            if (type == "EUENO") {
+                const privateKeyEncrypt = await euenoGetPrivateKey(holderId);
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, {privateKeyEncrypt: privateKeyEncrypt}, ResultMessage.APISUCCESS.message));    
+            }
+
+            if (type == "ZIDEN") {
+                const privateKeyEncrypt = await getPrivateKey(holderId);
+                res.send(buildResponse(ResultMessage.APISUCCESS.status, {privateKeyEncrypt: privateKeyEncrypt}, ResultMessage.APISUCCESS.message));
+            }
+
+            } catch (err: any) {
+
             res.send(buildErrorMessage(ExceptionMessage.UNKNOWN.status, err, ExceptionMessage.UNKNOWN.message));
         }
     }
